SMX4NMR-97: The JBI components classloader sometime fails to load classes or resources
git-svn-id: https://svn.apache.org/repos/asf/servicemix/smx4/nmr/trunk@745789 13f79535-47bb-0310-9956-ffa450edef68